--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Table Editor",
   "description": "Improved table navigation, formatting, and manipulation",
   "isDesktopOnly": false,
+  "version": "0.2.0",
   "js": "main.js"
 }
 
