Update release pipeline and demo gif
- Release pipeline should now include tag number in zip filename
- New gif shows the new keyboard shortcuts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./${{ env.PLUGIN_NAME }}.zip
-          asset_name: ${{ env.PLUGIN_NAME }}-${{ steps.build.outputs.tag_name }}.zip
+          asset_name: ${{ env.PLUGIN_NAME }}-${{ github.ref }}.zip
           asset_content_type: application/zip
 
       - name: Upload main.js
