Table control toolbar is finished
Applied css, cleaned up icons, add keyboard shortcut.

Fixes #6

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,10 @@
 * text=auto
 
 # Declare files that will always have LF line endings on checkout.
-*.ts text eol=lf
+*.css text eol=lf
 *.js text eol=lf
 *.json text eol=lf
-*.sh text eol=lf
 *.md text eol=lf
+*.md text eol=lf
+*.sh text eol=lf
+*.ts text eol=lf
