--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@susisu/mte-kernel": "2.1.0"
+    "@tgrosinger/md-advanced-tables": "3.0.0"
   }
 }
