--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github: [tgrosinger]
-custom: ["https://www.paypal.me/tgrosinger", "https://www.buymeacoffee.com/tgrosinger"]
+custom: ["https://paypal.me/tgrosinger", "https://buymeacoffee.com/tgrosinger"]
