--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "advanced-tables-obsidian",
   "version": "0.9.7",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "description": "Improved table navigation, formatting, manipulation, and formulas",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
@@ -31,6 +31,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@tgrosinger/md-advanced-tables": "3.2.0"
+    "@tgrosinger/md-advanced-tables": "3.2.3"
   }
 }
