--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Advanced Tables",
   "description": "Improved table navigation, formatting, manipulation, and formulas",
   "isDesktopOnly": false,
+  "minAppVersion": "0.10.2",
   "version": "0.8.0",
   "js": "main.js"
 }
