--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Tony Grosinger",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@codemirror/state": "0.19.0",
+    "@codemirror/view": "0.19.29",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
