--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,6 @@
   "isDesktopOnly": false,
   "minAppVersion": "1.0.0",
   "version": "0.18.0",
-  "js": "main.js"
-  "donation": "https://buymeacoffee.com/tgrosinger",
+  "js": "main.js",
+  "donation": "https://buymeacoffee.com/tgrosinger"
 }
