--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js",
+    "build": "rollup --config rollup.config.mjs",
     "prettier": "prettier --write 'src/**/*.+(ts|tsx|json|html|css)'",
     "eslint": "eslint . --ext .ts,.tsx --fix"
   },
@@ -13,24 +13,24 @@
   "author": "Tony Grosinger",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@codemirror/state": "0.19.0",
-    "@codemirror/view": "0.19.29",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@types/node": "^14.14.2",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "eslint": "7.12.1",
+    "@codemirror/state": "6.4.0",
+    "@codemirror/view": "6.23.1",
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-typescript": "11.1.6",
+    "@types/node": "20.11.6",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
+    "eslint": "8.56.0",
     "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.3",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "eslint-plugin-simple-import-sort": "5.0.3",
-    "obsidian": "https://github.com/obsidianmd/obsidian-api/archive/bbb696aeb8bf5126bf2ecbf84fc8284fe133bc20.tar.gz",
-    "rollup": "^2.32.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.3"
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.0.2",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "obsidian": "https://github.com/obsidianmd/obsidian-api/archive/da7309d0f22c073ca6eb0fe95c0eeee055a235a7.tar.gz",
+    "rollup": "4.9.6",
+    "tslib": "2.6.2",
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "@tgrosinger/md-advanced-tables": "3.9.1"
