--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "ESNext",
+    "target": "es6",
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
